# RpiLED

./: .gitignore  .gitmodules  1stMakefile.make.old  BlinkMe.sln  BlinkMe.vcxproj  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  Readme.md  RpiLED.sln  build.sh  rpi-test.sln  update.sh
BlinkMe/: BlinkMe.vcxproj  CMakeLists.txt  main.cpp  main.h
RpiLED/: RpiLED_old.sln
RpiLED.CMake/: CMakeLists.txt  CMakeSettings.json
RpiLED.Cli/: CMakeLists.txt  Program.cs  RpiLED.Cli.csproj  RpiLed.Cli.csproj
RpiLED.Cli/Bootstrap/: AppArguments.cs  AppBootstrap.cs  CliMenu.cs
RpiLED.Cli/Bootstrap/CommandArguments/: ReadCommandArgs.cs  SingleCharCommandArgs.cs
RpiLED.Cli/Bootstrap/Pages/: MainPage.cs
RpiLED.Cli/Bootstrap/Pages/Gpio/: GpioPage.cs  GpioReadPage.cs  GpioStatusPage.cs  GpioWritePage.cs
RpiLED.Cli/Bootstrap/Pages/Pwm/: PwmPage.cs
RpiLED.Cli/Bootstrap/Pages/ShiftRegisterTest/: ShiftRegisterTestPage.cs
RpiLED.Cli/Bootstrap/Pages/SingleDigitDisplay/: SingleDigitDisplayPage.cs
RpiLED.Cli/Bootstrap/Pages/Status/: StatusPage.cs
RpiLED.Cli/CommandArguments/: PwmCommandArgs.cs  ReadCommandArgs.cs  SingleCharCommandArgs.cs  WriteCommandArgs.cs
RpiLED.Cli/Commands/: CharacterCommand.cs  CharacterCommandArgs.cs  PwmCommand.cs  PwmCommandArgs.cs  ReadCommand.cs  ReadCommandArgs.cs  SingleCharCommand.cs  WriteCommand.cs  WriteCommandArgs.cs
RpiLED.Cli/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
RpiLED.Core/: CMakeLists.txt  Class1.cs  DisplayCharactersEnum.cs  GlobalSuppressions.cs  PinLayout.cs  RpiLED.Core.csproj  RpiLed.Core.csproj
RpiLED.Core/Exceptions/: EPinNotValidException.cs
RpiLED.Core/Models/: DisplayCharactersEnum.cs  PinModel.cs
RpiLED.Core/Properties/: AssemblyInfo.cs.template  ExceptionMessages.Designer.cs  ExceptionMessages.resx
RpiLED.Core/Services/: GpioService.cs  PwmService.cs  ShiftRegisterService.cs
RpiLED.G/: App.axaml.cs  RpiLED.GUI.csproj  ViewLocator.cs
RpiLED.G/Views/: MainWindow.axaml.cs
RpiLED.GUI/: App.axaml  App.axaml.cs  Program.cs  RpiLED.GUI.csproj  ViewLocator.cs
RpiLED.GUI/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
RpiLED.GUI/Views/: LED_control.axaml  LED_control.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
RpiLED.Gui/: App.axaml  App.axaml.cs  Program.cs  RpiLED.Gui.csproj  RpiLed.Gui.csproj  ViewLocator.cs
RpiLED.Gui/ViewModels/: MainWindowViewModel.cs  ShiftRegisterViewModel.cs  ViewModelBase.cs
RpiLED.Gui/Views/: MainWindow.axaml  MainWindow.axaml.cs  MainWindowView.axaml  MainWindowView.axaml.cs  ShiftRegisterView.axaml  ShiftRegisterView.axaml.cs
RpiLED/RpiLED.Cli/Commands/: PwmCommandArgs.cs
RpiLED/RpiLED.Core/: RpiLed.Core.csproj
RpiLED/RpiLED.Gui/: App.axaml.cs
RpiLED/RpiLED.Gui/Views/: MainWindow.axaml.cs
commands/: cmd_pin_write.cpp  cmd_pin_write.hpp  cmd_test_sr.cpp  cmd_test_sr.hpp  test_shiftregister.cpp  test_shiftregister.hpp  write_pin.cpp  write_pin.hpp
include/: ShiftRegister.hpp  app.hpp  main.h
src/: ShiftRegister.cpp  app.cpp  main.cpp
